<resources>
    <string name="app_name">PharmaEye</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_postal_address">Enter Postal Address</string>
    <string name="hint_health_card_number">Health Card No. (5 Digit)</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_drug">Select Medication Type</string>
    <string name="add_new_prescription">Add New Prescription</string>


    <string name="hint_search_health_card">Search By Health Card No</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>